--- a/联盟链.md
+++ b/联盟链.md
@@ -1,16 +1,26 @@
-# 联盟链的类型
-联盟链（Consortium Blockchain） 是一种 区块链网络类型，它介于公有链与私有链之间，具有以下主要特点：
+# 联盟链定义及特点
+联盟链（Consortium Blockchain） 是一种 区块链网络类型，它介于公有链与私有链之间，由多个组织或实体共同维护的区块链。它结合了公有链的开放性和私有链的隐私性，允许多个参与方在一定范围内共享数据和协作。联盟链的治理通常由参与方共同决定，适用于跨组织的合作场景。具有以下主要特点：
 |特征|说明|
 |--:|---|
 |权限控制|	仅限经过许可的成员节点加入（如企业、政府部门、银行等）|
 |共识机制|	通常采用效率高、成本低的共识算法（如PBFT、Raft等），无需挖矿|
 |可监管性|	节点之间有组织管理，支持合规审计与追责，适用于金融与政务等行业|
 |适用场景|	多机构合作但不完全信任的业务场景，如供应链金融、跨境支付、司法存证、政务协同等|
-# Fabric
 
-# 长安链
+# 联盟链的类型
+|序号|名称|牵头公司/组织|主要特点|
+|--:|--|--|
+|1|Hyperledger Fabric|Linux Foundation(IBM主导)|
+|2|FISCO BCOS|金链盟（微众银行）|
+|3|ChainMaker(长安链)|北京微芯研究院|
+|4|AntChain(蚂蚁链)|蚂蚁集团|
 
-# EOS
+## Fabric
 
-# FESCO BCOS
+
+## 长安链
+
+## EOS
+
+## FESCO BCOS
 
