--- a/联盟链.md
+++ b/联盟链.md
@@ -16,8 +16,15 @@
 |4|AntChain(蚂蚁链)|蚂蚁集团|
 
 ## Fabric
-
-
+### 数据层
+作用：定义Fabric中的区块、交易、状态数据等存储结构
+|序号|特性|说明|
+|--:|--|--|
+|1|账本结构|双层结构账本，由区块链（BlockChain）+状态数据库（State DB）组成，区块链负责记录历史交易，后者保存当前世界的状态。|
+|2|可插拔状态数据库|支持多种数据库如Level DB、CouchDB（支持Jason查询）|
+|3|无内置加密币机制|不记录代笔或者资产状态，主要记录的是业务数据状态变化|
+|4|数据隐私支持强|支持私有数据集合（Private Data Collections）和多通道（Channel）隔离不同的数据|
+### 
 ## 长安链
 
 ## EOS
