--- a/联盟链.md
+++ b/联盟链.md
@@ -24,7 +24,15 @@
 |2|可插拔状态数据库|支持多种数据库如Level DB、CouchDB（支持Jason查询）|
 |3|无内置加密币机制|不记录代笔或者资产状态，主要记录的是业务数据状态变化|
 |4|数据隐私支持强|支持私有数据集合（Private Data Collections）和多通道（Channel）隔离不同的数据|
-### 
+### 网络层
+作用：构建多组织协作的联盟网络，实现节点间信息传输
+|序号|特性|说明|
+|--:|--|--|
+|1|联盟链结构|由多个受信组织组成，不是开放的全节点网络|
+|2|节点角色分工明确|节点分为Peer（账本维护、智能合约执行、数据存储）、Order（交易排序与大包，决定区块生成顺序）、CA（管理组织成员身份，办法数字证书）、Endorser（模拟交易摒弃那命，决定交易有效性）等|
+|3|基于TLS与MSP的身份验证|全节点通信使用TLS加密，节点身份有MSP隔离|
+|4|通道机制|多通道支持多业务/多租户并行运行，数据强制隔离|
+
 ## 长安链
 
 ## EOS
